--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <span class="year">2023 - 2026</span>
                             <h3>Diploma in Computer Science</h3>
                             <span class="company">Ziwa Technical Institute</span>
-                            <p>Graduated with honors, focusing on web development, data structures, and algorithms, AI and machine learning.</p>
+                            <p>Focusing on web development, data structures, and algorithms, AI and machine learning.</p>
                         </li>
                         <li class="resume-item">
                             <span class="year">2019 - 2022</span>
