--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="skills-links">
                         <p style="margin-top:20px; font-weight: 600;">Check out my social media for more:</p>
                         <a href="#">GitHub Profile</a>
-                        <a href="#">CodePen Examples</a>
+                        <a href="https://login-37da6.web.app"> latest project</a>
                     </div>
                 </div>
             </div>
