--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
     <section class="section contact-section" id="contact-section">
         <h2 class="heading">Contact <span>Me</span></h2>
         <div class="contact-container">
-            <form action="#" class="contact-form">
+            <form action="https://formsubmit.com/underworldhacker7@gmail.com" method="POST"
+ class="contact-form">
                 <div class="form-group">
                     <label for="name">Your Name</label>
                     <input type="text" id="name" name="name" required placeholder="Enter your name">
