--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <section class="section contact-section" id="contact-section">
         <h2 class="heading">Contact <span>Me</span></h2>
         <div class="contact-container">
-            <form action="https://formsubmit.co/underworldhacker7@gmail.com" method="POST"
+            <form action="#"
  class="contact-form">
                 <div class="form-group">
                     <label for="name">Your Name</label>
