Update index.html update to LinkedIn link url

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="sci">
                         <a href="https://www.tiktok.com/@_pro..max?lang=en" target="_blank" class="icon"><i class='bx bxl-tiktok'></i></a>
                         <a href="https://x.com/?lang=en" target="_blank" class="icon"><i class='bx bxl-twitter x-icon'></i></a>
-                        <a href="https://www.linkedin.com/in/max-njuguna-35741a385t=0XRox9TykVJbQ1"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.linkedin.com/in/max-njuguna-35741a385?utm_source=share_via&utm_content=profile&utm_medium=member_android"><i class='bx bxl-linkedin'></i></a>
                         <a href="https://www.instagram.com/_pro._.max/"><i class='bx bxl-instagram'></i></a>
                     </div>
                 </div>
