--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="resume-container">
             <div class="resume-box">
                 <h2>Summary</h2>
-                <p class="desc">Highly motivated and detail-oriented web developer with a strong foundation in front-end technologies and a passion for creating engaging user experiences. Eager to leverage skills in a challenging role.</p>
+                <p class="desc">Highly motivated and detail-oriented web developer with a strong foundation in full stack technologies and a passion for creating engaging user experiences. Eager to leverage skills in a challenging role.</p>
                 <div class="resume-buttons">
                     <button class="resume-btn active" data-target="education-details">Education</button>
                     <button class="resume-btn" data-target="experience-details">Experience</button>
@@ -147,14 +147,14 @@
                             <h3>Junior Web Developer</h3>
                             <span class="company">Underworld Tech</span>
                             <ul>
-                                <li>Developed and maintained client websites using HTML, CSS, JavaScript, and React.</li>
+                                <li>Developed and maintained client websites using HTML, CSS, JavaScript, Java and React.</li>
                                 <li>Collaborated with design team to implement responsive and user-friendly interfaces.</li>
                                 <li>Participated in code reviews and contributed to improving coding standards.</li>
                             </ul>
                         </li>
                         <li class="resume-item">
                             <span class="year"> 2025</span>
-                            <h3>Frontend Intern</h3>
+                            <h3>Intern</h3>
                             <span class="company">University Of Eldoret</span>
                             <ul>
                                 <li>Assisted in building prototypes and components for web applications.</li>
