--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <li class="resume-item">
                             <span class="year">2023 - 2026</span>
                             <h3>Diploma in Computer Science</h3>
-                            <span class="company">Ziwa Technical Institute</span>
+                            <span class="company">Ziwa Technical Training Institute</span>
                             <p>Focusing on web development, data structures, and algorithms, AI and machine learning.</p>
                         </li>
                         <li class="resume-item">
