--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="btn-sci">
                     <a href="https://drive.google.com/uc?export=download&id=1x2cmX0ovsf5zCXDehh43E6ZZYszm-Bky"" class="btn primary-btn">Download CV</a>
                     <div class="sci">
-                        <a href="https://www.tiktok.com/@_pro..max?lang=en" target="_blank" class="icon"><i class='bx bxl-tiktok'></i></a>
+                        <a href="https://www.tiktok.com/@maxx.exe401?_t=ZM-90LeeudlCvM&_r=1" target="_blank" class="icon"><i class='bx bxl-tiktok'></i></a>
                         <a href="https://x.com/?lang=en" target="_blank" class="icon"><i class='bx bxl-twitter x-icon'></i></a>
                         <a href="https://www.linkedin.com/in/max-njuguna-35741a385?utm_source=share_via&utm_content=profile&utm_medium=member_android"><i class='bx bxl-linkedin'></i></a>
                         <a href="https://www.instagram.com/_pro._.max/"><i class='bx bxl-instagram'></i></a>
