Fix HTML structure and update contact form

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                     </ul>
                     <div class="skills-links">
                         <p style="margin-top:20px; font-weight: 600;">Check out my social media for more:</p>
-                        <a href="#">GitHub Profile</a>
-                        <a href="https://login-37da6.web.app"> latest project</a>
+                        <a href="https://github.com/Techmax018/">GitHub Profile</a>
+                        <a href="maxdevs-hub.vercel.app"> latest project</a>
                     </div>
                 </div>
             </div>
@@ -294,4 +294,5 @@
         document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
 </body>
+
 </html>
