--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </ul>
                     <div class="skills-links">
                         <p style="margin-top:20px; font-weight: 600;">Check out my social media for more:</p>
-                        <a href="https://github.com/Techmax018/">GitHub Profile</a>
+                        <a href="https://github.com/Techmax018/?tab=repositories">GitHub Repositories</a>
                         <a href="maxdevs-hub.vercel.app"> latest project</a>
                     </div>
                 </div>
@@ -296,3 +296,4 @@
 </body>
 
 </html>
+
