--- a/index.html
+++ b/index.html
@@ -178,11 +178,14 @@
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>JavaScript (ES6+)</li>
+                    
+                        <li>Java</li>
                         <li>React.js</li>
                         <li>Node.js</li>
                         <li>Express.js</li>
                         <li>MongoDB</li>
                         <li>MySql</li>
+                        <li>spring framework</li>
                         <li>Git</li>
                         <li>Responsive Design</li>
                         <li>UI/UX Principles</li>
