--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <div class="skills-links">
                         <p style="margin-top:20px; font-weight: 600;">Check out my social media for more:</p>
                         <a href="https://github.com/Techmax018/?tab=repositories">GitHub Repositories</a>
-                        <a href="maxdevs-hub.vercel.app"> latest project</a>
+                        <a href="https://blue-moon-travel.vercel.app"> latest project</a>
                     </div>
                 </div>
             </div>
