--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </h2>
                 <p>I'm a passionate and creative professional with expertise in web development, digital content creation, and an artistic flair for dance. Bringing innovative solutions and engaging experiences to life.</p>
                 <div class="btn-sci">
-                    <a href="https://drive.google.com/uc?export=download&id=1x2cmX0ovsf5zCXDehh43E6ZZYszm-Bky"" class="btn primary-btn">Download CV</a>
+                    <a href="https://docs.google.com/document/d/1Byas7K7AIFhDmU186XU1GdEPclIn79oF/export?format=pdf" class="btn primary-btn">Download CV</a>
                     <div class="sci">
                         <a href="https://www.tiktok.com/@maxx.exe401?_t=ZM-90LeeudlCvM&_r=1" target="_blank" class="icon"><i class='bx bxl-tiktok'></i></a>
                         <a href="https://x.com/?lang=en" target="_blank" class="icon"><i class='bx bxl-twitter x-icon'></i></a>
